appId: com.qazandoqafood
---
- runFlow: login.yaml

- tapOn: "Selecione seu endereço..."
- assertVisible: "Localização"
- tapOn: "PERMITIR"
- tapOn: "Pastelaria da Maria"
- tapOn: "add-item-buttom"
- tapOn:
    text: "add-item-buttom"
    index: 1

- tapOn:
    id: "add-item-buttom"
    index: 2

- tapOn: "open-cart-button"
- tapOn: "CONFIRMAR PEDIDO"
- scrollUntilVisible:
    element: "Dinheiro"
- tapOn: "Dinheiro"

- tapOn: "FAZER PEDIDO"
- assertVisible: "Pedido realizado"
